--- a/Frontend/Prana/src/app/Modules/auth/components/singin/singin.component.html
+++ b/Frontend/Prana/src/app/Modules/auth/components/singin/singin.component.html
@@ -49,6 +49,7 @@
   
       <mat-form-field appearance="outline">
         <input matInput placeholder="Teléfono" type="number" formControlName="phone">
+        <mat-error *ngIf="phone?.errors?.['pattern']">Ingrese un teléfono válido.</mat-error>
       </mat-form-field >
 
       <mat-form-field appearance="outline">
