Handle backend password errors on signup

--- a/Frontend/Prana/src/app/Modules/auth/components/singin/singin.component.html
+++ b/Frontend/Prana/src/app/Modules/auth/components/singin/singin.component.html
@@ -57,6 +57,7 @@
         <mat-error *ngIf="password?.invalid && (password?.dirty || password?.touched)">
           <span *ngIf="password?.errors?.['required']">La contraseña es requerida.</span>
           <span *ngIf="password?.errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</span>
+          <span *ngIf="password?.errors?.['passwordInvalid']">{{password?.errors?.['passwordInvalid']}}</span>
         </mat-error>
       </mat-form-field>
   
